# comfe-component-features

./: .gitignore  README.md  main.py  pyproject.toml
configs/R/: comfe.yaml
configs/R/experiment/: comfe-view_dinov2_vits_14_torchvision_flowers.yaml  comfe_dinov2_vits_14_torchvision_flowers.yaml
configs/model/augmentations/: 224px_labelled_normed.yaml  center_stretch_224px.yaml
configs/model/dataset/: torchvision_flowers.yaml
configs/model/loss/: crossentropy_weighted.yaml
configs/model/methods/: comfe.yaml
configs/model/networks/: dinov2_vits_14.yaml
configs/model/optimizer/: AdamW.yaml
configs/model/scheduler/: cosine_annealing_with_warmup.yaml
goo/augmentations/: paws_helpers_v2.py  paws_segmentation_v2.py
goo/datasets/: torchvision_lightning.py
goo/datasets/torchvision/: torchvision_vocdetection_2012seg.py
goo/methods/: model_base.py
goo/methods/interpretable/: comfe.py
goo/networks/clustering/: comfe_head.py
goo/networks/xformer/: factory.py
goo/optimizer/: adam.py
tests/: conftest.py  test_train.py
