[project]
name = "comfe"
version = "0.1.0"
requires-python = ">=3.9,<3.10"

dependencies = [
  "numpy<2",

  "torch==2.1.0",
  "torchvision==0.16",
  "lightning==2.1",
  "torchmetrics==1.2",

  "timm==0.9",
  "faiss-gpu==1.7.2",

  "lightly==1.3.3",
  "tensorboard==2.15",

  "hydra-core",
  "hydra-colorlog",

  "opencv-python",
  "scikit-learn",
  "pytest",
  "rich",
  "pyrootutils",
  "PyYAML",
  "pytz",
  "overrides",
  "scipy",
  "matplotlib",
  "virtualenv",
  "pandas",

  "xFormers==0.0.22.post7",
]


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
